Mises à jour du code, Changement du nom du site

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sinko",
-  "homepage": "https://MosefSanogo.github.io/sinko-Service/",
+  "homepage": "https://MosefSanogo.github.io/sinko-Service",
   "private": true,
   "version": "0.0.0",
   "type": "module",
